# ralph

./: .coveragerc  .gitignore  Makefile  Makefile.docker  README.md  gulpfile.js  mise.ci-mysql.toml  mise.ci-psql.toml  mise.toml  package.json  pyproject.toml  ruff.toml  setup.py
.github/workflows/: main.yml  publish.yml
contrib/common/apt/: ralph.list
contrib/dhcp_agent/: dhcp_agent.py  setup.py  test.py
debian/: changelog  control  rules
docker/: Dockerfile-deb  Dockerfile-inkpy  Dockerfile-local-dev  Dockerfile-local-dev-static  Dockerfile-local-interpreter  Dockerfile-prod  docker-compose-dev.yml  docker-compose-local-dev.yml  docker-compose.yml
docker/provision/: createsuperuser.py  supervisor.conf
mise-tasks/: init_transitions.sh
requirements/: dev.txt  docs.txt  prod.txt  test.txt
scripts/: build_deb_package.sh
src/ralph/access_cards/: admin.py  models.py
src/ralph/access_cards/migrations/: 0001_initial.py
src/ralph/accessories/: admin.py  models.py
src/ralph/accessories/migrations/: 0004_alter_accessory_user.py
src/ralph/accounts/: admin.py  apps.py  ldap.py  ldap_helpers.py  models.py  urls.py  views.py
src/ralph/accounts/migrations/: 0011_ralphuser_service_information_bubbles.py  0011_ralphuser_service_visibility_scopes.py  0012_auto_20250408_1522.py  0013_auto_20250409_1408.py  0014_auto_20250411_1431.py
src/ralph/admin/: apps.py  autocomplete.py  autocomplete_urls.py  decorators.py  fields.py  filters.py  mixins.py  sites.py  sitetrees.py  widgets.py
src/ralph/admin/static/: auto-complete-helpers.js
src/ralph/admin/templatetags/: admin_change_list.py  dashboard_tags.py
src/ralph/admin/tests/: test_templatetags.py  tests_filters.py  tests_functional.py  tests_multiadd.py  tests_views.py
src/ralph/admin/views/: multiadd.py
src/ralph/api/: fields.py  filters.py  serializers.py  viewsets.py
src/ralph/api/tests/: api.py  test_fields.py  test_rendering.py  test_serializers.py
src/ralph/assets/: admin.py  apps.py  invoice_report.py  views.py
src/ralph/assets/api/: serializers.py  serializers_dchosts.py  views.py
src/ralph/assets/migrations/: 0040_alter_asset_price_currency_alter_disk_base_object_and_more.py  0041_alter_asset_price_currency.py
src/ralph/assets/models/: assets.py  base.py  choices.py  components.py  configuration.py
src/ralph/assets/tests/: test_api.py  test_subscribers.py
src/ralph/attachments/: forms.py  helpers.py  urls.py
src/ralph/back_office/: admin.py  apps.py  models.py
src/ralph/back_office/tests/: factories.py  test_api.py  test_models.py
src/ralph/configuration_management/: api.py  models.py  views.py
src/ralph/configuration_management/migrations/: 0002_auto_20170622_1254.py  0004_delete_scmstatuscheck.py  0005_delete_scmstatuscheck.py
src/ralph/dashboards/: admin.py  admin_filters.py  helpers.py  models.py  urls.py
src/ralph/dashboards/migrations/: 0008_auto_20250303_0923.py
src/ralph/dashboards/tests/: test_models.py  test_parser.py
src/ralph/data_center/: admin.py  admin_actions.py  apps.py  forms.py  subscribers.py
src/ralph/data_center/api/: routers.py  serializers.py  views.py
src/ralph/data_center/migrations/: 0035_auto_20250225_1404.py  0036_auto_20250228_0912.py  0037_auto_20250321_1108.py  0038_delete_vip_data.py  0039_delete_vip.py  0040_alter_cluster_base_objects_and_more.py
src/ralph/data_center/models/: __init__.py  choices.py  components.py  mixins.py  physical.py  virtual.py
src/ralph/data_center/tests/: factories.py  test_admin.py  test_api.py  test_forms.py  test_models.py  test_publishers.py  test_view.py
src/ralph/data_importer/: fields.py  mixins.py
src/ralph/data_importer/tests/: test_commands.py  test_export.py  test_fields.py
src/ralph/dc_view/: apps.py
src/ralph/dc_view/urls/: api.py  ui.py
src/ralph/deployment/: admin.py  apps.py  deployment.py  models.py  urls.py
src/ralph/deployment/migrations/: 0010_alter_prebootconfiguration_configuration.py
src/ralph/dhcp/: admin.py  models.py  urls.py
src/ralph/dhcp/agent/: dhcp_agent.py  test.py
src/ralph/dhcp/tests/: test_agent.py  test_views.py
src/ralph/dns/: apps.py  dnsaas.py  forms.py  views.py
src/ralph/domains/: admin.py  apps.py  forms.py
src/ralph/domains/migrations/: 0009_alter_domaincontract_price_currency.py  0010_alter_domaincontract_price_currency.py
src/ralph/domains/models/: domains.py
src/ralph/lib/api/: exceptions.py  utils.py
src/ralph/lib/cache/: __init__.py  django_connection_pool_redis_cache.py
src/ralph/lib/custom_fields/: admin.py  fields.py  forms.py  models.py  signals.py
src/ralph/lib/dj_choices/: __init__.py  fields.py
src/ralph/lib/error_pages/: views.py
src/ralph/lib/external_services/: __init__.py  base.py  models.py  tests.py
src/ralph/lib/hooks/: __init__.py  main.py
src/ralph/lib/information_bubble/: admin.py  api.py  apps.py  filters.py  models.py  tests.py
src/ralph/lib/metrics/: __init__.py  collector.py  middlewares.py
src/ralph/lib/mixins/: api.py  fields.py  forms.py  models.py
src/ralph/lib/network/: __init__.py
src/ralph/lib/openstack/: client.py
src/ralph/lib/permissions/: api.py  models.py  views.py
src/ralph/lib/polymorphic/: models.py
src/ralph/licences/: admin.py  models.py
src/ralph/networks/: admin.py  api.py  apps.py  fields.py  filters.py  forms.py  views.py
src/ralph/notifications/: apps.py
src/ralph/operations/: admin.py  api.py  apps.py  models.py  views.py
src/ralph/reports/: apps.py  forms.py  helpers.py  models.py  resources.py  urls.py  views.py
src/ralph/security/: api.py  apps.py  models.py  transitions.py  views.py
src/ralph/settings/: base.py  dev.py  local.template  prod.py  test.py
src/ralph/sim_cards/: admin.py  api.py  models.py
src/ralph/ssl_certificates/: admin.py  api.py  apps.py  models.py
src/ralph/supports/: admin.py  api.py  models.py
src/ralph/tests/: admin.py  apps.py  models.py
src/ralph/trade_marks/: admin.py  models.py
src/ralph/urls/: base.py  dev.py  test.py
src/ralph/virtual/: admin.py  api.py  forms.py  models.py  urls.py
(+97 files in other folders)
