[build-system]
requires = ["setuptools<66.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Ralph"
requires-python = ">=3.8.0,<3.9"
version="3"
dynamic = [
    "authors",
    "classifiers",
    "description",
    "entry-points",
    "keywords",
    "license",
    "readme",
    "scripts",
]
dependencies = [
    "django~=3.0.0",
    "Faker==0.9.0",
    "Markdown==3.2.1",
    "Pillow",
    "Unidecode==0.04.18",
    "django-auth-ldap==2.1.0",
    "django-cryptography==1.0",
    "django-extensions==2.2.9",
    "django-filter==2.4.0",
    "django-import-export==2.0.1",
    "django-money==2.0.3",
    "django-mptt==0.11",
    "django-prometheus==2.2.0",
    "django-reversion==3.0.5",
    "django-rq==2.8.0",
    "django-sitetree==1.17.3",
    "django-taggit==1.3.0",
    "django-threadlocals==0.8",
    "djangorestframework==3.13.1",
    "djangorestframework_xml==2.0.0",
    "drf-nested-routers==0.92.5",
    "factory-boy==2.11.1",
    "mysqlclient==1.3.13",
    "netaddr==0.10.1",
    "openpyxl==2.6.4",
    "py-moneyed==1.2",
    "python-dateutil==2.9.0",
    "pytz==2025.1",
    "redis~=4.0",
    "requests-oauthlib==1.3.0",
    "requests==2.20.0",
    "six==1.16.0",
    "sqlparse==0.2.3",
    "tablib",
    "typing==3.6.6",
    "pyhermes==0.3.0",
    "statsd==3.2.1",
    "django-redis-sessions==0.6.2",
    "hiredis==1.0.0",
    "raven",
    # openstack
    "python-keystoneclient",
    "python-novaclient==3.2.0",
    "openstacksdk==1.5.0",
    "python-ironicclient",
    "Babel==2.11.0",
    "debtcollector==1.3.0",
    "funcsigs==0.4",
    "iso8601==0.1.11",
    "keystoneauth1",
    "monotonic==0.6",
    "msgpack-python==0.4.7",
    "netifaces",
    "oslo.config",
    "oslo.i18n",
    "oslo.serialization",
    "oslo.utils",
    "pbr",
    "positional==1.0.1",
    "prettytable==0.7.2",
    "simplejson==3.8.2",
    "stevedore",
    "wrapt==1.10.6",
    "setuptools<66.0",
    "dj-choices==0.11.0",
    "django-redis==3.8.4",
    "psycopg2-binary>=2.9.10",
    "rq==2.2.0",
    "django-taggit-serializer>=0.1.7",
]

[tool.ruff]
exclude = [
    "*local.py",
    "*migrations*"
]

[tools.ruff.format]
line-length = 88
line-ending = "auto"

[dependency-groups]
dev = [
    "coverage",
    "django-cors-headers>=3.11.0",
    "django-debug-toolbar>=1.11",
    "django-silk",
    "ipdb",
    "ipython",
    "pudb",
    "ruff",
    "werkzeug==0.16.1",
]

test = [
    "coverage",
    "coveralls",
    "ddt",
    "django-plainpasswordhasher",
    "sphinx",
    "mock==4.0.2",
]

prod = [
    "gunicorn",
]

docs = [
    "mkdocs",
    "mkdocs-material",
    "mkdocs-bootswatch",
    "mkdocs_bootstrap",
]


[tool.ruff.lint]
# Add "B" (bugbear) in the future
select = ["E4", "E7", "E9", "F"]
ignore = []

