[build-system]
requires = ["setuptools<66.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Ralph"
requires-python = ">=3.8.0,<3.9"
version="3"
dynamic = [
    "authors",
    "classifiers",
    "description",
    "entry-points",
    "keywords",
    "license",
    "readme",
    "scripts",
]
dependencies = [
    "Babel==2.11.0",
    "Faker==0.9.0",
    "Markdown==3.2.1",
    "Pillow",
    "Unidecode==0.04.18",
    "debtcollector==1.3.0",
    "django-auth-ldap==2.1.0",
    "django-cryptography==1.0",
    "django-extensions==3.1.5",
    "django-filter==2.4.0",
    "django-import-export==2.0.1",
    "django-money==2.0.3",
    "django-mptt==0.11",
    "django-prometheus==2.2.0",
    "django-redis~=3.8.0",
    "django-reversion==3.0.5",
    "django-rq==2.8.0",
    "django-sitetree==1.17.3",
    "django-taggit-serializer>=0.1.7",
    "django-taggit==1.3.0",
    "django-threadlocals==0.8",
    "djangorestframework==3.13.1",
    "djangorestframework_xml==2.0.0",
    "django~=3.0.0",
    "drf-nested-routers==0.92.5",
    "funcsigs==0.4",
    "hiredis==1.0.0",
    "iso8601==0.1.11",
    "keystoneauth1",
    "monotonic==0.6",
    "msgpack-python==0.4.7",
    "mysqlclient==1.3.13",
    "netaddr==0.10.1",
    "netifaces",
    "openpyxl==2.6.4",
    "openstacksdk==1.5.0",
    "oslo.config",
    "oslo.i18n",
    "oslo.serialization",
    "oslo.utils",
    "pbr",
    "positional==1.0.1",
    "prettytable==0.7.2",
    "psycopg2-binary>=2.9.10",
    "py-moneyed==1.2",
    "pyhermes==0.3.0",
    "python-dateutil==2.9.0",
    "python-ironicclient",
    "python-keystoneclient",
    "python-novaclient==3.2.0",
    "pytz==2025.1",
    "raven",
    "redis~=4.0",
    "requests-oauthlib==1.3.0",
    "requests==2.20.0",
    "rq==1.16.2",
    "setuptools<66.0",
    "simplejson==3.8.2",
    "six==1.16.0",
    "sqlparse==0.2.3",
    "statsd==3.2.1",
    "stevedore",
    "tablib",
    "typing==3.6.6",
    "wrapt==1.10.6",
]

[tool.ruff]
exclude = [
    "*local.py",
    "*migrations*"
]

[tools.ruff.format]
line-length = 88
line-ending = "auto"

[dependency-groups]
dev = [
    "coverage",
    "django-cors-headers>=3.11.0",
    "django-debug-toolbar>=1.11",
    "django-silk",
    "ipdb",
    "ipython",
    "pudb",
    "ruff",
    "werkzeug==0.16.1",
]

test = [
    "coverage",
    "coveralls",
    "ddt",
    "django-plainpasswordhasher",
    "factory-boy==3.2.1",
    "mock==4.0.2",
    "sphinx",
]

prod = [
    "gunicorn",
]

docs = [
    "mkdocs",
    "mkdocs-material",
    "mkdocs-bootswatch",
    "mkdocs_bootstrap",
]


[tool.ruff.lint]
# Add "B" (bugbear) in the future
select = ["E4", "E7", "E9", "F"]
ignore = []

